--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,7 +1,7 @@
 <h1>JL's Magic 8 Ball</h1>
 <%= form_for @question do |f| %>
   <%= f.text_area :text, placeholder: "Enter a question!" %><br>
-  <%= f.submit %>
+  <%= f.submit %><br>
 <% end %>
 <!-- show each question -->
 <div id="questions">
